Fixing width of info for events so that dates don't wrap when they don't need to.

--- a/ourinternet/static/sass/styles.scss
+++ b/ourinternet/static/sass/styles.scss
@@ -413,6 +413,7 @@ body{
     margin-top: -1em;
     padding-bottom: 1em;
     display: table;
+    width: 100%;
 
     .data{
       display: table-cell;
@@ -429,7 +430,7 @@ body{
     }
   }
 
-  
+
   }
 
   .item-content {
